--- a/package.json
+++ b/package.json
@@ -14,7 +14,18 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "contentful": "^9.3.3",
+    "dotenv": "^16.0.3",
     "gatsby": "^5.4.2",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^3.4.0",
+    "gatsby-plugin-mdx": "^5.7.0",
+    "gatsby-plugin-sharp": "^5.4.0",
+    "gatsby-remark-images-contentful": "^6.7.0",
+    "gatsby-source-contentful": "^8.4.1",
+    "gatsby-source-filesystem": "^5.7.0",
+    "gatsby-transformer-remark": "^6.7.0",
+    "gatsby-transformer-sharp": "^5.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
