--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "contentful": "^9.3.3",
     "dotenv": "^16.0.3",
     "gatsby": "^5.4.2",
